--- a/embedding.ipynb
+++ b/embedding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f2d53df5",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bb1d5d87",
    "metadata": {},
    "outputs": [],
@@ -28,35 +28,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f40c9d31",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['the glass of milk',\n",
+       " 'the glass of juice',\n",
+       " 'the cup of tea',\n",
+       " 'I am a good boy',\n",
+       " 'I am a good developer',\n",
+       " 'understand the meaning of words',\n",
+       " 'your videos are good']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sent"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ac302b7e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Define the vocabulary size\n",
+    "voc_size=10000"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "27a312cd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[8433, 1111, 954, 6636],\n",
+       " [8433, 1111, 954, 3153],\n",
+       " [8433, 1437, 954, 6355],\n",
+       " [1774, 7719, 786, 6420, 2570],\n",
+       " [1774, 7719, 786, 6420, 5818],\n",
+       " [7402, 8433, 5451, 954, 7236],\n",
+       " [2329, 6625, 9435, 6420]]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#One Hot representation\n",
+    "one_hot_repr=[one_hot(words,voc_size) for words in sent]\n",
+    "one_hot_repr"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "caaec577",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#word embedding representation\n",
+    "from tensorflow.keras.layers import Embedding\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from tensorflow.keras.models import Sequential"
+   ]
   },
   {
    "cell_type": "code",
@@ -64,7 +112,9 @@
    "id": "a8146edc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -82,7 +132,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.0"
   }
  },
