--- a/embedding.ipynb
+++ b/embedding.ipynb
@@ -108,18 +108,394 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a8146edc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "#we need to make all sentences of equal size or we would not be able to train it in RNN.\n",
+    "#all the words going in RNN would be going for a fixed number of timestamp and based on sentence size\n",
+    "#so using pad_sequences we try to set a maximum sentence length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c50a7fcd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sent_length=8 #for shorter sentences it will add the remaining number of 0's before or after\n",
+    "embedded_docs=pad_sequences(one_hot_repr,padding='pre',maxlen=sent_length) #pre means that 0's will be added at the beginning of the sentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "fc14fd41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[   0    0    0    0 8433 1111  954 6636]\n",
+      " [   0    0    0    0 8433 1111  954 3153]\n",
+      " [   0    0    0    0 8433 1437  954 6355]\n",
+      " [   0    0    0 1774 7719  786 6420 2570]\n",
+      " [   0    0    0 1774 7719  786 6420 5818]\n",
+      " [   0    0    0 7402 8433 5451  954 7236]\n",
+      " [   0    0    0    0 2329 6625 9435 6420]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(embedded_docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c2fdbd81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#feature representation\n",
+    "dim=10 #dimensions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3d66c655",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\HP\\anaconda3\\envs\\RNN\\Lib\\site-packages\\keras\\src\\layers\\core\\embedding.py:97: UserWarning: Argument `input_length` is deprecated. Just remove it.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "model=Sequential()\n",
+    "model.add(Embedding(voc_size,dim,input_length=sent_length))\n",
+    "model.compile('adam','mse')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9baf17a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential\"</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1mModel: \"sequential\"\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
+       "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
+       "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
+       "│ embedding (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Embedding</span>)           │ ?                      │   <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> (unbuilt) │\n",
+       "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
+       "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
+       "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
+       "│ embedding (\u001b[38;5;33mEmbedding\u001b[0m)           │ ?                      │   \u001b[38;5;34m0\u001b[0m (unbuilt) │\n",
+       "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Total params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> (0.00 B)\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m Total params: \u001b[0m\u001b[38;5;34m0\u001b[0m (0.00 B)\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> (0.00 B)\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m Trainable params: \u001b[0m\u001b[38;5;34m0\u001b[0m (0.00 B)\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Non-trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> (0.00 B)\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m Non-trainable params: \u001b[0m\u001b[38;5;34m0\u001b[0m (0.00 B)\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "aea3d9d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 33ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [-0.01424663,  0.04666208,  0.02873259, -0.03101235,\n",
+       "          0.00652445,  0.03379171,  0.01943352, -0.01731427,\n",
+       "          0.03090117,  0.00306433],\n",
+       "        [ 0.00139553,  0.0324671 , -0.02090414,  0.02538896,\n",
+       "         -0.00372642,  0.01466418,  0.03894671, -0.01240788,\n",
+       "         -0.01768075, -0.01916767],\n",
+       "        [-0.02943122, -0.01284153,  0.0111632 , -0.00052077,\n",
+       "         -0.01478312, -0.04790782,  0.04788709, -0.03593699,\n",
+       "          0.00510775,  0.01350487],\n",
+       "        [-0.00489917,  0.01692248,  0.00523005,  0.0087993 ,\n",
+       "         -0.03375401,  0.03322733,  0.02248475, -0.04693146,\n",
+       "         -0.03685294, -0.02084254]],\n",
+       "\n",
+       "       [[ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [-0.01424663,  0.04666208,  0.02873259, -0.03101235,\n",
+       "          0.00652445,  0.03379171,  0.01943352, -0.01731427,\n",
+       "          0.03090117,  0.00306433],\n",
+       "        [ 0.00139553,  0.0324671 , -0.02090414,  0.02538896,\n",
+       "         -0.00372642,  0.01466418,  0.03894671, -0.01240788,\n",
+       "         -0.01768075, -0.01916767],\n",
+       "        [-0.02943122, -0.01284153,  0.0111632 , -0.00052077,\n",
+       "         -0.01478312, -0.04790782,  0.04788709, -0.03593699,\n",
+       "          0.00510775,  0.01350487],\n",
+       "        [-0.00089826, -0.03298408,  0.0024757 ,  0.01404835,\n",
+       "          0.01439034,  0.04976109, -0.00893031,  0.02410282,\n",
+       "          0.04485356,  0.00436282]],\n",
+       "\n",
+       "       [[ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [-0.01424663,  0.04666208,  0.02873259, -0.03101235,\n",
+       "          0.00652445,  0.03379171,  0.01943352, -0.01731427,\n",
+       "          0.03090117,  0.00306433],\n",
+       "        [ 0.04258405,  0.03474302,  0.01510963, -0.02000885,\n",
+       "         -0.01391194,  0.02452557, -0.00307763,  0.01365117,\n",
+       "         -0.04631364, -0.02406861],\n",
+       "        [-0.02943122, -0.01284153,  0.0111632 , -0.00052077,\n",
+       "         -0.01478312, -0.04790782,  0.04788709, -0.03593699,\n",
+       "          0.00510775,  0.01350487],\n",
+       "        [-0.03577384, -0.03104985, -0.04036779, -0.02708088,\n",
+       "          0.01192801, -0.00820053,  0.02139768, -0.03835112,\n",
+       "         -0.02644253, -0.00365735]],\n",
+       "\n",
+       "       [[ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [-0.02386963,  0.02405492, -0.04165319,  0.02891574,\n",
+       "         -0.04267794,  0.01308376,  0.00409653,  0.02866998,\n",
+       "          0.03607092,  0.02702134],\n",
+       "        [-0.02270639,  0.00777323,  0.03261361, -0.01320633,\n",
+       "          0.00310389, -0.00908389, -0.03953161, -0.02435336,\n",
+       "         -0.04252918, -0.04693571],\n",
+       "        [ 0.04960488, -0.02852303,  0.04051686,  0.03213983,\n",
+       "          0.0496478 , -0.02685389, -0.00463526,  0.02389529,\n",
+       "          0.03084384,  0.01056681],\n",
+       "        [-0.04681064, -0.03271012, -0.04216269, -0.04225677,\n",
+       "          0.01726088, -0.03222767,  0.04611227,  0.00955522,\n",
+       "         -0.01949926,  0.01938787],\n",
+       "        [ 0.01501192, -0.0456877 ,  0.04388462, -0.00288056,\n",
+       "         -0.04899653,  0.03521231, -0.03617871,  0.00474402,\n",
+       "         -0.02351486, -0.0427636 ]],\n",
+       "\n",
+       "       [[ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [-0.02386963,  0.02405492, -0.04165319,  0.02891574,\n",
+       "         -0.04267794,  0.01308376,  0.00409653,  0.02866998,\n",
+       "          0.03607092,  0.02702134],\n",
+       "        [-0.02270639,  0.00777323,  0.03261361, -0.01320633,\n",
+       "          0.00310389, -0.00908389, -0.03953161, -0.02435336,\n",
+       "         -0.04252918, -0.04693571],\n",
+       "        [ 0.04960488, -0.02852303,  0.04051686,  0.03213983,\n",
+       "          0.0496478 , -0.02685389, -0.00463526,  0.02389529,\n",
+       "          0.03084384,  0.01056681],\n",
+       "        [-0.04681064, -0.03271012, -0.04216269, -0.04225677,\n",
+       "          0.01726088, -0.03222767,  0.04611227,  0.00955522,\n",
+       "         -0.01949926,  0.01938787],\n",
+       "        [-0.0464046 , -0.04013366,  0.00566231,  0.04063774,\n",
+       "         -0.03765224,  0.03356046, -0.04147315, -0.02072277,\n",
+       "         -0.02010295,  0.01932298]],\n",
+       "\n",
+       "       [[ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [-0.03898212, -0.00746746,  0.04230868,  0.00541101,\n",
+       "          0.04756821,  0.04300319,  0.03095816, -0.03352995,\n",
+       "          0.00221317,  0.03445009],\n",
+       "        [-0.01424663,  0.04666208,  0.02873259, -0.03101235,\n",
+       "          0.00652445,  0.03379171,  0.01943352, -0.01731427,\n",
+       "          0.03090117,  0.00306433],\n",
+       "        [ 0.01941064,  0.02006369, -0.01442228, -0.02104678,\n",
+       "         -0.00696079,  0.00046999,  0.04096167,  0.00336367,\n",
+       "         -0.04794209, -0.00431765],\n",
+       "        [-0.02943122, -0.01284153,  0.0111632 , -0.00052077,\n",
+       "         -0.01478312, -0.04790782,  0.04788709, -0.03593699,\n",
+       "          0.00510775,  0.01350487],\n",
+       "        [ 0.02923666, -0.03085964,  0.02130607, -0.01958689,\n",
+       "          0.04731445,  0.00031378,  0.00633789,  0.03607469,\n",
+       "         -0.00031744, -0.00555379]],\n",
+       "\n",
+       "       [[ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [ 0.0028423 ,  0.04546655,  0.02169183,  0.03107656,\n",
+       "         -0.04478921,  0.04552071,  0.00804485, -0.00147621,\n",
+       "         -0.04398173, -0.02940161],\n",
+       "        [-0.04684982,  0.00464605, -0.00128162, -0.00690327,\n",
+       "          0.03537918, -0.03502043, -0.04986029,  0.02294249,\n",
+       "          0.02263314,  0.00124265],\n",
+       "        [ 0.00081081, -0.00265612, -0.00067317,  0.03766182,\n",
+       "          0.0316    ,  0.04610041, -0.04502958,  0.00694457,\n",
+       "          0.02726622, -0.01634385],\n",
+       "        [-0.02873436, -0.02252424, -0.01855508,  0.00670253,\n",
+       "         -0.03688983,  0.00410638, -0.03152495, -0.03509389,\n",
+       "          0.00195676, -0.04182976],\n",
+       "        [-0.04681064, -0.03271012, -0.04216269, -0.04225677,\n",
+       "          0.01726088, -0.03222767,  0.04611227,  0.00955522,\n",
+       "         -0.01949926,  0.01938787]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(embedded_docs) #every word represented in 10 dimensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "77e9b07a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   0,    0,    0,    0, 8433, 1111,  954, 6636], dtype=int32)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embedded_docs[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c50a7fcd",
+   "id": "18c7ab2a",
    "metadata": {},
    "outputs": [],
    "source": []
