--- a/simplernn.ipynb
+++ b/simplernn.ipynb
@@ -2564,8 +2564,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
+   "id": "0388983d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer='adam',loss='binary_crossentropy',metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "id": "b59006b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create an instance of EarlyStopping Callback\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "earlystopping=EarlyStopping(monitor='val_loss',patience=5,restore_best_weights=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "92072eb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.early_stopping.EarlyStopping at 0x2152be63e60>"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "earlystopping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "44fd2542",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m53s\u001b[0m 83ms/step - accuracy: 0.6163 - loss: 0.8528 - val_accuracy: 0.6444 - val_loss: 0.5993\n",
+      "Epoch 2/10\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m66s\u001b[0m 57ms/step - accuracy: 0.6507 - loss: 928676511744.0000 - val_accuracy: 0.6690 - val_loss: 0.5905\n",
+      "Epoch 3/10\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 58ms/step - accuracy: 0.7503 - loss: 0.5096 - val_accuracy: 0.6888 - val_loss: 0.5672\n",
+      "Epoch 4/10\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m37s\u001b[0m 59ms/step - accuracy: 0.8205 - loss: 0.4048 - val_accuracy: 0.7708 - val_loss: 0.4737\n",
+      "Epoch 5/10\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m38s\u001b[0m 61ms/step - accuracy: 0.8756 - loss: 0.3008 - val_accuracy: 0.8068 - val_loss: 0.4336\n",
+      "Epoch 6/10\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m37s\u001b[0m 59ms/step - accuracy: 0.9125 - loss: 0.2258 - val_accuracy: 0.8226 - val_loss: 0.4380\n",
+      "Epoch 7/10\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m37s\u001b[0m 60ms/step - accuracy: 0.9338 - loss: 0.1766 - val_accuracy: 0.8142 - val_loss: 0.4690\n",
+      "Epoch 8/10\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m37s\u001b[0m 59ms/step - accuracy: 0.9502 - loss: 0.1400 - val_accuracy: 0.8246 - val_loss: 0.5094\n",
+      "Epoch 9/10\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m38s\u001b[0m 60ms/step - accuracy: 0.9586 - loss: 0.1176 - val_accuracy: 0.8212 - val_loss: 0.5613\n",
+      "Epoch 10/10\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m39s\u001b[0m 62ms/step - accuracy: 0.9358 - loss: 0.1671 - val_accuracy: 0.7920 - val_loss: 0.5943\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Train model with early stopping\n",
+    "history=model.fit(X_train,y_train,epochs=10,batch_size=32,validation_split=0.2,callbacks=[earlystopping])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "a03235d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    }
+   ],
+   "source": [
+    "##save my model file\n",
+    "model.save('simple_rnn_imdb.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b401ee8",
    "metadata": {},
    "outputs": [],
    "source": []
